apps/gcsweb.k8s.io/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gcsweb
  namespace: gcsweb
  labels:
    app: gcsweb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gcsweb-k8s-io
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: gcsweb
spec:
  backend:
    serviceName: gcsweb
    servicePort: http
